--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.4.0",
     "@nestjs/typeorm": "^10.0.2",
+    "@types/cookie-parser": "^1.4.7",
     "bcrypt": "^5.1.1",
     "class-transform": "^0.7.0",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.0",
