--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/multer": "^1.4.12",
     "bcrypt": "^5.1.1",
     "class-transform": "^0.7.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
